<resources>
    <string name="app_name">Take a step</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="type_a_message">Type a message</string>
    <string name="all_categories">All Categories</string>
    <string name="today_cases">Today cases</string>
    <string name="egypt_live">Egypt Live</string>
    <string name="worldwide_live">Worldwide Live</string>
    <string name="total_cases">Total cases</string>
    <string name="today_recovered">Today recovered</string>
    <string name="total_recovered">Total recovered</string>
    <string name="today_deaths">Today deaths</string>
    <string name="total_deaths">Total deaths</string>
    <string name="population">Population</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="go_to_setting">Go to wifi Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_vaccines">All Vaccines</string>
    <string name="add_video">Add video</string>
    <string name="caption">Caption</string>
    <string name="category">Category</string>
    <string name="upload">Upload</string>
    <string name="this_user_get_vaccinated_give_him_discount">This user get vaccinated. Give him discount</string>
    <string name="add_vaccine_discount">Add Vaccine Discount</string>
    <string name="upload_discount">Upload discount</string>
    <string name="add_vaccine_image">Add Vaccine Image</string>
    <string name="vaccine_name">Vaccine Name</string>
    <string name="vaccine_info">Vaccine Info</string>
    <string name="no_content_added_yet">No Content added yet!</string>
    <string name="no_messages_yet">No messages yet!</string>
    <string name="no_requests_available">No requests available</string>
    <string name="together_we_win">Together We Win</string>
    <string name="are_you_ready">Are You Ready</string>
    <string name="covid_19_discount">COVID-19 Discount</string>
    <string name="take_a_step">Take A Step</string>
    <string name="no_chats_exists">No chats exists…</string>
    <string name="no_vaccines_added">No Vaccines added!</string>
    <string name="no_content_available_now">No Content available now!</string>
    <string name="to_get_discounts_please_upload_your_verified_vaccination_card_photo">To get discounts. Please upload your verified vaccination card photo</string>
    <string name="add_vaccine_certificate">Add Vaccine Certificate</string>
    <string name="upload_certificate">Upload certificate</string>
    <string name="congratulations_you_have_earned_discount">Congratulations. You have earned discount</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_to_continue">login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="choose_your_country_to_complete_vaccine_registration">Choose your country to complete vaccine registration</string>
    <string name="country">Country</string>
    <string name="go_to_registration">Go to registration</string>
    <string name="no_information_about_vaccines_available_now">No information about vaccines available now</string>
    <string name="country_name">Country name</string>
    <string name="country_link">Country link</string>
    <string name="add">Add</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="spirit">/</string>
    <string name="last_update">Last update:</string>
</resources>