<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:src="@drawable/logo2"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/are_you_ready_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/are_you_ready_btn"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/are_you_ready"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@id/logo_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/together_we_win_btn"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/together_we_win_btn"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/together_we_win"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@id/are_you_ready_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/covid_19_discount_btn"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/covid_19_discount_btn"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/covid_19_discount"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@id/together_we_win_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/take_a_step_btn"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/take_a_step_btn"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/take_a_step"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@id/covid_19_discount_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>