<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.admin.AddDiscountActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#1557FF"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Add COVID-19 Discount" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/abhaya_libre"
        android:gravity="center"
        android:text="@string/this_user_get_vaccinated_give_him_discount"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar" />

    <FrameLayout
        android:id="@+id/discount_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/discountImage"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/background_sign_up_image"
            android:scaleType="centerCrop"
            android:foreground="?attr/selectableItemBackground"
            app:riv_corner_radius="5dp"
            app:riv_oval="false" />

        <TextView
            android:id="@+id/addDiscountTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_vaccine_discount"
            android:textSize="18sp" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload_discount_btn"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@id/discount_frame_layout"
        android:layout_marginHorizontal="32dp"
        android:text="@string/upload_discount"
        android:layout_marginTop="32dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="@id/upload_discount_btn"
        app:layout_constraintBottom_toBottomOf="@id/upload_discount_btn"
        app:layout_constraintStart_toStartOf="@id/upload_discount_btn"
        app:layout_constraintEnd_toEndOf="@id/upload_discount_btn"/>


</androidx.constraintlayout.widget.ConstraintLayout>