<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/chooseCountryLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <AutoCompleteTextView
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Country"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <GridLayout
            android:id="@+id/live_covid19_report"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:columnCount="3"
            android:rowCount="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chooseCountryLayout">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="50dp">

                    <TextView
                        android:id="@+id/today_cases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/purple_200"
                        android:textSize="48sp"
                        android:textStyle="bold"
                        tools:text="81" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_down_arrow"
                    app:tint="@color/purple_200" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/today_cases"
                    android:textColor="@color/purple_200"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="50dp">

                    <TextView
                        android:id="@+id/today_recovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/purple_200"
                        android:textSize="48sp"
                        android:textStyle="bold"
                        tools:text="16" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_down_arrow"
                    app:tint="@color/purple_200" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/today_recovered"
                    android:textColor="@color/purple_200"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="50dp">

                    <TextView
                        android:id="@+id/today_deaths"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/purple_200"
                        android:textSize="48sp"
                        android:textStyle="bold"
                        tools:text="48" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_down_arrow"
                    app:tint="@color/purple_200" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/today_deaths"
                    android:textColor="@color/purple_200"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="50dp">

                    <TextView
                        android:id="@+id/total_cases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/purple_200"
                        android:textSize="48sp"
                        android:textStyle="bold"
                        tools:text="8,151,725" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_down_arrow"
                    app:tint="@color/purple_200" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/total_cases"
                    android:textColor="@color/purple_200"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="50dp">

                    <TextView
                        android:id="@+id/total_recovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/purple_200"
                        android:textSize="48sp"
                        android:textStyle="bold"
                        tools:text="581" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_down_arrow"
                    app:tint="@color/purple_200" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/total_recovered"
                    android:textColor="@color/purple_200"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="50dp">

                    <TextView
                        android:id="@+id/total_deaths"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/purple_200"
                        android:textSize="48sp"
                        android:textStyle="bold"
                        tools:text="281" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_down_arrow"
                    app:tint="@color/purple_200" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/total_deaths"
                    android:textColor="@color/purple_200"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </GridLayout>

        <LinearLayout
            android:id="@+id/population_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/live_covid19_report">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:cardCornerRadius="50dp">

                <TextView
                    android:id="@+id/population"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/purple_200"
                    android:textSize="48sp"
                    android:textStyle="bold"
                    tools:text="103,235,167" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_down_arrow"
                app:tint="@color/purple_200" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/population"
                android:textColor="@color/purple_200"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/population_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Last update:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/last_update_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:drawableStart="@drawable/ic_date"
                android:drawablePadding="8dp"
                android:drawableTint="@color/purple_200"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="20/4/2021" />

            <TextView
                android:id="@+id/last_update_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:drawableStart="@drawable/ic_time"
                android:drawablePadding="8dp"
                android:drawableTint="@color/purple_200"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="5:55 AM" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>